<resources>
    <string name="app_name">Assignment2</string>
    <string name="first_name_text">First Name:</string>
    <string name="first_name_edit">First Name</string>
    <string name="last_name_text">Last Name:</string>
    <string name="last_name_edit">Last Name</string>
    <string name="nick_name_text">Nick Name:</string>
    <string name="nick_name_edit">Nick Name</string>
    <string name="age_text">Age:</string>
    <string name="age_edit">Age</string>
    <string name="enter_your_information_then_take_a_quiz">Enter Your Information then Take a QUIZ!!</string>
    <string name="quiz">Quiz</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer1">Answer1</string>
    <string name="answer2">Answer2</string>
    <string name="answer3">Answer3</string>
    <string name="answer4">Answer4</string>
    <string name="question">Question</string>
    <string name="result">Result</string>
</resources>
