<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/Question_Fragment"
             tools:context=".QuizFragment">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RadioGroup
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/AnswerGroup">
            <RadioButton
                    android:text="@string/answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Answer1" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Answer2" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Answer3" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Answer4" android:layout_weight="1"/>
        </RadioGroup>
        <TextView
                android:text="@string/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Question" android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/AnswerGroup"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.025"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>