<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@android:color/darker_gray">
    <TextView
            android:text="@string/enter_your_information_then_take_a_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prompt"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="62dp"
            app:layout_constraintBottom_toBottomOf="@+id/First_Name_Edit" android:layout_marginStart="18dp"
            android:layout_marginBottom="68dp"/>
    <TextView
            android:text="@string/first_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/First_Name_Text"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/First_Name_Edit" android:layout_marginBottom="39dp"
            app:layout_constraintBottom_toTopOf="@+id/Last_Name_Text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/first_name_edit"
            android:ems="10"
            android:id="@+id/First_Name_Edit"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/Last_Name_Edit"
            android:nextFocusDown="@+id/Last_Name_Edit"
            tools:ignore="Autofill"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/First_Name_Text"
            app:layout_constraintStart_toEndOf="@+id/First_Name_Text" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/last_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Last_Name_Text"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Last_Name_Edit"
            app:layout_constraintEnd_toStartOf="@+id/Last_Name_Edit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp" android:layout_marginEnd="21dp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name_edit"
            android:ems="10"
            android:id="@+id/Last_Name_Edit"
            tools:ignore="Autofill"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/Nick_Name_Edit"
            android:nextFocusDown="@+id/Nick_Name_Edit"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            android:layout_marginTop="214dp"
            app:layout_constraintStart_toEndOf="@+id/Last_Name_Text" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="21dp"
    />
    <TextView
            android:text="@string/nick_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Nick_Name_Text"
            android:textSize="24sp"
            android:layout_marginTop="75dp"
            app:layout_constraintEnd_toStartOf="@+id/Nick_Name_Edit" android:layout_marginBottom="75dp"
            app:layout_constraintTop_toTopOf="@+id/Last_Name_Text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/Age_Text"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nick_name_edit"
            android:ems="10"
            android:id="@+id/Nick_Name_Edit"
            tools:ignore="Autofill"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/Age_Edit"
            android:nextFocusDown="@+id/Age_Edit"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/Nick_Name_Text"
            app:layout_constraintStart_toEndOf="@+id/Nick_Name_Text" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Age_Text"
            android:textSize="24sp"
            android:layout_marginTop="119dp"
            app:layout_constraintTop_toBottomOf="@+id/Last_Name_Text" app:layout_constraintEnd_toStartOf="@+id/Age_Edit"
            android:layout_marginEnd="21dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/age_edit"
            android:ems="10"
            android:id="@+id/Age_Edit"
            tools:ignore="Autofill"
            android:imeOptions="actionDone"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/holo_red_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/Age_Text" android:layout_marginEnd="21dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Quiz_Button"
            app:layout_constraintStart_toStartOf="@+id/Age_Text" android:layout_marginTop="27dp"
            android:layout_marginStart="17dp"
            app:layout_constraintTop_toBottomOf="@+id/Age_Edit"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Result" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.405" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textStyle="bold" android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Quiz_Button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.06"/>
</android.support.constraint.ConstraintLayout>